--- a/Jenkins/jenkinsfile
+++ b/Jenkins/jenkinsfile
@@ -22,22 +22,16 @@ pipeline {
         stage('VersionCheck') {
             steps {
                 echo 'I am in Version Phase'
-                sh 'aws s3 ls'
+                
             }
         }
         stage('Monitoring') {
             steps {
-                build 'url-monitoring-job'
+                echo 'I am in Monitoring Phase'
             }
         }
         
-        stage('Slack Message') {
-            steps {
-                slackSend channel: '#devops-alerts',
-                color: 'good',
-                message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER}\n More info at: ${env.BUILD_URL}"
-                }
-        }
+       
       
     }
 }
